--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <header class="p-5 mb-4" id="topOfPage">
         <h1 class="display-3 d-flex justify-content-center">Work Day Scheduler</h1>
           <p class="lead d-flex justify-content-center">A simple calendar app for scheduling your work day</p>
+          <p class="lead d-flex justify-content-center">Grey = Past; Red = Present; Green = Future</p>
     </header>
     
     <div class="container-fluid px-5">
